--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div id="logo">
-                <img src="" alt="">
-            </div>
-            <a href="">Home</a>
-            <a href="">About Us</a>
-            <a href="">Contact</a>
-            <a href="">Teams</a>
-            <a href="">Games</a>
-            <a href="">Jams</a>
-        </nav>
-        <a href="">Join Us</a>
+        <div id="logo">
+            <img src="" alt="">
+        </div>
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Contact</a>
+        <a href="">Teams</a>
+        <a href="">Games</a>
+        <a href="">Jams</a>
+        <a href="">Join</a>
     </header>
     <main>
         <section>
@@ -31,7 +29,7 @@
                 <a href="">Sponsor us</a>
             </div>
         </section>
-        <section>
+        <!-- <section>
             <h2>Welcome</h2>
             <p>a breather n light info/intro</p>
         </section>
@@ -58,7 +56,7 @@
                 <p>were open from Monday - thursday.</p>
             </details>
         </section>
-        <footer>footer</footer>
+        <footer>footer</footer> -->
     </main>
 </body>
 </html>
