--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
     </header>
     <main>
         <section>
-            <h1>Hero Section</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit minus est error saepe. Magni, doloremque.</p>
-            <div>
-                <a href=""><img src="./images/discord-icon.svg" alt="discordlogo" width="30px">Join Our Team for Free</a>
-                <a href="">Sponsor us</a>
-            </div>
+            <article>
+                <h1>Hero Section</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit minus est error saepe. Magni, doloremque.</p>
+                <div>
+                    <a href=""><img src="./images/discord-icon.svg" alt="discordlogo" width="30px">Join Our Team for Free</a>
+                    <a href="">Sponsor us</a>
+                </div>
+            </article>
+            <article>
+                <img src="" alt="">
+            </article>
         </section>
         <!-- <section>
             <h2>Welcome</h2>
