--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./sassy folder/main.css">
     <title>LudenWright</title>
 </head>
+<!-- jierotg;qeior -->
 <body>
     <header>
         <div id="logo">
