--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="./sassy folder/main.css">
+    <link rel="icon" href="./images/logoicon.png">
     <title>LudenWright</title>
 </head>
 <body>
     <header>
         <div id="logo">
-            <img src="" alt="">
+            <img src="./images/logoicon.png" alt="logo"><p>LudenWright</p>
         </div>
-        <a href="">Home</a>
-        <a href="">About Us</a>
-        <a href="">Contact</a>
-        <a href="">Teams</a>
-        <a href="">Games</a>
-        <a href="">Jams</a>
-        <a href="">Join</a>
+        <a href="#">Home</a>
+        <a href="./pages/about.html">About</a>
+        <a href="./pages/contact.html">Contact</a>
+        <a href="./pages/team.html">Teams</a>
+        <a href="./pages/games.html">Games</a>
+        <a href="./pages/jams.html">Jams</a>
+        <a href="" class="button CTA">Join</a>
     </header>
     <main>
         <section>
@@ -26,8 +27,8 @@
                 <h1>Hero Section</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit minus est error saepe. Magni, doloremque.</p>
                 <div>
-                    <a href=""><img src="./images/discord-icon.svg" alt="discordlogo" width="30px">Join Our Team for Free</a>
-                    <a href="">Sponsor us</a>
+                    <a href="" class="button CTA"><img src="./images/discord-icon.svg" alt="discordlogo" width="30px">Join Our Team for Free</a>
+                    <a href="" class="button">Sponsor us</a>
                 </div>
             </article>
             <article>
